# CubismNativeMotionSyncComponents

./: CHANGELOG.md  LICENSE.md  NOTICE.ja.md  NOTICE.md  README.ja.md  README.md
Core/: CHANGELOG.md  LICENSE.md  README.ja.md  README.md
Core/CRI/: LICENSE.md  RedistributableFiles.txt
Core/include/: Live2DCubismMotionSyncEngine.h
Framework/: CMakeLists.txt  README.ja.md  README.md
Framework/src/: CMakeLists.txt  CubismModelMotionSyncSettingJson.cpp  CubismModelMotionSyncSettingJson.hpp  CubismMotionSync.cpp  CubismMotionSync.hpp  CubismMotionSyncAudioBuffer.hpp  CubismMotionSyncData.cpp  CubismMotionSyncData.hpp  CubismMotionSyncDataJson.cpp  CubismMotionSyncDataJson.hpp  CubismMotionSyncDefine.hpp  CubismMotionSyncEngineAnalysisResult.cpp  CubismMotionSyncEngineAnalysisResult.hpp  CubismMotionSyncEngineController.cpp  CubismMotionSyncEngineController.hpp  CubismMotionSyncEngineCri.cpp  CubismMotionSyncEngineCri.hpp  CubismMotionSyncEngineMappingInfo.cpp  CubismMotionSyncEngineMappingInfo.hpp  CubismMotionSyncEngineVersion.cpp  CubismMotionSyncEngineVersion.hpp  CubismMotionSyncProcessorCRI.cpp  CubismMotionSyncProcessorCRI.hpp  CubismMotionSyncProcessorCri.cpp  CubismMotionSyncProcessorCri.hpp  ICubismMotionSyncEngine.cpp  ICubismMotionSyncEngine.hpp  ICubismMotionSyncProcessor.cpp  ICubismMotionSyncProcessor.hpp
Framework/src/Lib/: CMakeLists.txt  CubismMotionSyncConfig.hpp  CubismMotionSyncEngineLib.cpp  CubismMotionSyncEngineLib.hpp  CubismMotionSyncEngineStaticLib.cpp  CubismMotionSyncEngineStaticLib.hpp  CubismMotionSyncUtil.hpp  ICubismMotionSyncEngineLib.hpp  Live2DCubismMotionSyncEngine.hpp
Framework/src/Lib/impl/: CMakeLists.txt  CubismMotionSyncEngineLoader.cpp  CubismMotionSyncEngineLoader.hpp  LibraryLoader.h  LibraryLoader_Mac.cpp  LibraryLoader_Win.cpp
Samples/OpenGL/: README.ja.md  README.md
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/: gradle.properties
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/: CMakeLists.txt  build.gradle
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/Microphone/: AndroidManifest.xml
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/Microphone/cpp/: CMakeLists.txt  LAppAudioManager.cpp  LAppAudioManager.hpp  LAppMotionSyncModel.cpp  LAppMotionSyncModel.hpp  LAppView.cpp  LAppView.hpp
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/Microphone/java/com/live2d/demo/microphone/: MainActivity.java
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/SoundFile/: AndroidManifest.xml
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/SoundFile/cpp/: LAppAudioManager.cpp  LAppAudioManager.hpp  LAppMotionSyncModel.cpp  LAppMotionSyncModel.hpp  LAppView.cpp  LAppView.hpp
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/SoundFile/java/com/live2d/demo/soundFile/: MainActivity.java
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/main/: AndroidManifest.xml
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/main/cpp/: CMakeLists.txt  JniBridgeC.cpp  JniBridgeC.hpp  LAppAudioManager.cpp  LAppAudioManager.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppMotionSyncDefine.cpp  LAppMotionSyncDefine.hpp  LAppMotionSyncModel.cpp  LAppMotionSyncModel.hpp  LAppView.cpp  LAppView.hpp
Samples/OpenGL/Demo/proj.android.cmake/MotionSync/app/src/main/java/com/live2d/demo/: AudioInput.java  AudioManager.java  AudioOutput.java  InputTask.java  JniBridgeJava.java  MainActivity.java  OutputTask.java
Samples/OpenGL/Demo/proj.ios.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.ios.cmake/scripts/: proj_xcode
Samples/OpenGL/Demo/proj.ios.cmake/src/: AppDelegate.h  AppDelegate.mm  AppMicrophoneDelegate.h  AppMicrophoneDelegate.mm  CMakeLists.txt  Info.plist  LAppAudioManager.h  LAppAudioManager.mm  LAppMicrophoneAudioManager.h  LAppMicrophoneAudioManager.mm  LAppMotionSyncDefine.h  LAppMotionSyncDefine.mm  LAppMotionSyncMicrophoneModel.h  LAppMotionSyncMicrophoneModel.mm  LAppMotionSyncModel.h  LAppMotionSyncModel.mm  LAppMutex.h  LAppMutex.mm  MicrophoneViewController.h  MicrophoneViewController.mm  ViewController.h  ViewController.mm  main.m  mainMicrophone.m
Samples/OpenGL/Demo/proj.mac.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.mac.cmake/scripts/: make_xcode  proj_xcode
Samples/OpenGL/Demo/proj.mac.cmake/src/: CMakeLists.txt  LAppAudioManager.cpp  LAppAudioManager.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppMicrophoneAudioManager.cpp  LAppMicrophoneAudioManager.hpp  LAppMicrophoneDelegate.cpp  LAppMicrophoneDelegate.hpp  LAppMotionSyncDefine.cpp  LAppMotionSyncDefine.hpp  LAppMotionSyncMicrophoneModel.cpp  LAppMotionSyncMicrophoneModel.hpp  LAppMotionSyncModel.cpp  LAppMotionSyncModel.hpp  LAppMutex.cpp  LAppMutex.hpp  LAppPlaySound.cpp  LAppPlaySound.hpp
Samples/OpenGL/Demo/proj.win.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.win.cmake/scripts/: _msvc_common.bat
Samples/OpenGL/Demo/proj.win.cmake/src/: CMakeLists.txt  LAppAudioManager.cpp  LAppAudioManager.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppMicrophoneAudioManager.cpp  LAppMicrophoneAudioManager.hpp  LAppMicrophoneDelegate.cpp  LAppMicrophoneDelegate.hpp  LAppMotionSyncDefine.cpp  LAppMotionSyncDefine.hpp  LAppMotionSyncMicrophoneModel.cpp  LAppMotionSyncMicrophoneModel.hpp  LAppMotionSyncModel.cpp  LAppMotionSyncModel.hpp  LAppPlaySound.cpp  LAppPlaySound.hpp  mainMotionSync.cpp  mainMotionSyncMicrophone.cpp
Samples/Resources/Kei_basic/: Kei_basic.cdi3.json  Kei_basic.moc3  Kei_basic.model3.json  Kei_basic.motionsync3.json
Samples/Resources/Kei_vowels/: Kei_vowels.cdi3.json  Kei_vowels.moc3  Kei_vowels.model3.json  Kei_vowels.motionsync3.json
